fix dialog: fixed dialog width overflowing out of screen fix navigation: fixed coming-soon tag getting double height on small screens

--- a/src/less/components/dialog.less
+++ b/src/less/components/dialog.less
@@ -8,7 +8,10 @@
 
   transform: translate(-50%, -50%);
 
-  width: 90vw;
+  width: 95vw;
+
+  box-sizing: border-box;
+
   height: auto;
 
   padding: 1.5rem 1.7rem;
