--- a/src/less/styles/all.less
+++ b/src/less/styles/all.less
@@ -21,6 +21,7 @@
 
 li.coming-soon::after {
   margin-right: 13px;
+  height: 16px;
   float: right;
 }
 
